# fishweb

./: .gitignore  .pre-commit-config.yaml  README.md  go.mod  go.sum  main.go  pyproject.toml  requirements.txt  setup.py
.github/workflows/: deploy.yml  release.yml
cmd/: new.go  root.go  serve.go
docs/: index.md  package.json
docs/.vitepress/: config.mts
docs/content/: getting-started.md
docs/content/concepts/: arowana.md  asgi.md  entry.md  env.md  reload.md  service.md  static.md  venv.md  wsgi.md
docs/content/hosting/cloudflared/: index.md
docs/content/integrations/: arowana.md
docs/content/reference/: cli.md  config.md
examples/asgi/: main.py
examples/fastapi/: main.py  requirements.txt
examples/flask/: fishweb.yaml  main.py
examples/nested.sub/: main.py
examples/static/: fishweb.yaml  index.html  script.js  style.css
fishweb/: main.py
fishweb/cmd/: __init__.py  logs.py  serve.py
fishweb/worker/: worker.py
src/fishweb/: __init__.py  __main__.py  logging.py
src/fishweb/app/: __init__.py  app.py  config.py  middleware.py  wrapper.py
src/fishweb/cmd/: cron.py  logs.py  main.py  run.py  serve.py
test-apps/asgi/: main.py
utils/: fs.go
