[project]
name = "fishweb"
version = "0.1.0"
description = "Web apps like serverless"
readme = "README.md"
authors = [{ name = "SlumberDemon", email = "hi@sofa.sh" }]
requires-python = ">=3.9"
dependencies = [
    "platformdirs~=4.3.6",
    "starlette~=0.45.3",
    "uvicorn~=0.34.0",
    "loguru~=0.7.3",
    "typer~=0.15.1",
]
classifiers = ["Programming Language :: Python"]

[project.scripts]
fishweb = "fishweb.cmd:cli"

[project.urls]
"Bug Reports" = "https://github.com/slumberdemon/fishweb/issues"
Source = "https://github.com/slumberdemon/fishweb"

[dependency-groups]
dev = []

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-data = { fishweb = ["py.typed"] }

[tool.ruff]
src = ["src"]
line-length = 119
target-version = "py39"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["A", "D", "TD003"]

[tool.pyright]
venvPath = "."
venv = ".venv"
